[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cassandra-share"
version = "0.1.0"
description = "Ephemeral share links for Claude Code conversation markdown."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "aiosqlite>=0.20",
    "httpx>=0.28",
    "cassandra-mcp-auth @ git+https://github.com/Cassandras-Edge/cassandra-auth.git@main#subdirectory=python",
]

[project.scripts]
cassandra-share = "cassandra_share.main:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
